@@ -1,3 +1,8 @@
+2005-07-25  Bruno Haible  <bruno@clisp.org>
+
+	* intl-compat.c (DLL_EXPORTED) [HAVE_VISIBILITY]: Define to the gcc
+	visibility attribute.
+
 2005-07-24  Bruno Haible  <bruno@clisp.org>
 
 	Tidy up exported symbols.
